Load a resource from the jdk runtime because it is not in the sources.
Closes #22.