@@ -54,7 +54,8 @@ def addedExports = ['jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
     'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
     'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
     'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-    'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED']
+    'jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+    'jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED']
 
 compileJava {
     addedExports.forEach {
@@ -89,18 +90,13 @@ task apidocs(type: JavaExec) {
     inputs.file "overview.md"
     ext.destinationDir = '../../jdrupes-mdoclet.gh-pages/javadoc/'
 
-    jvmArgs = ['--add-exports=jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    jvmArgs = [
+        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
-        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED']
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED'
+    ]
     classpath sourceSets.main.compileClasspath
     
     main = 'jdk.javadoc.internal.tool.Main'
@@ -108,13 +104,11 @@ task apidocs(type: JavaExec) {
         '-use',
         '-linksource',
         '-link', 'https://docs.oracle.com/en/java/javase/21/docs/api/',
-        '--add-exports', 'jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-        '--add-exports', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
@@ -158,18 +152,13 @@ task testJavadoc(type: Javadoc) {
     options.addStringOption('Xdoclint:-html', '-quiet')
 
     options.setJFlags([
-        '--add-exports=jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED',
-        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED'])
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED',
+        '--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED',
+        '--add-opens=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit.resources.releases=ALL-UNNAMED'])
 }
 
 check.dependsOn testJavadoc
